--- a/wiki/de/Fasteners_Workbench.html
+++ b/wiki/de/Fasteners_Workbench.html
@@ -271,9 +271,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_DIN985.svg&amp;filetimestamp=20210815132141&amp;.html" class="mw-file-description"><img src="../File/Fasteners_DIN985.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 7041</b> Sechskantmutter mit Drehmomentbegrenzung (mit nichtmetallischem Einsatz), Typ 2.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ISO7043.svg&amp;filetimestamp=20240405163104&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ISO7043.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 7043</b> Sechskantmutter mit Flansch und Drehmomentbegrenzung (mit nichtmetallischem Einsatz).</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ISO7044.svg&amp;filetimestamp=20240405163240&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ISO7044.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 7044</b> Sechskantmutter (Typ alle Metalle) mit Flansch und Drehmomentbegrenzung.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ISO7719.svg&amp;filetimestamp=20240405162834&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ISO7719.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 7719</b> Prevailing torque type all-metal hexagon nut.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ISO7719.svg&amp;filetimestamp=20240405162834&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ISO7719.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 7719</b> Sechskantmutter (Typ alle Metalle) mit Drehmomentbegrenzung.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ISO7719.svg&amp;filetimestamp=20240405162834&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ISO7719.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 7720</b> Prevailing torque type all-metal hexagon nut, style 2.</li></ul>
 </div>
@@ -415,13 +413,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118085357
+Cached time: 20260118085416
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.385 seconds
-Real time usage: 0.481 seconds
-Preprocessor visited node count: 699/1000000
+CPU time usage: 0.511 seconds
+Real time usage: 0.757 seconds
+Preprocessor visited node count: 698/1000000
 Post&#8208;expand include size: 7106/2097152 bytes
 Template argument size: 1357/2097152 bytes
 Highest expansion depth: 8/100
@@ -431,19 +429,19 @@ Unstrip post&#8208;expand size: 1775/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.016      1 -total
- 24.59%    5.168      1 Template:Fasteners_Tools_navi/de
- 19.99%    4.200      7 Template:PropertyData/de
- 12.04%    2.530      1 Template:TOCright
- 11.38%    2.392      7 Template:Variable
-  9.96%    2.094      1 Template:VersionPlus/de
-  8.91%    1.872      2 Template:Caption
-  6.20%    1.302      1 Template:Navigation_menu_2
-  6.06%    1.273      7 Template:MenuCommand
-  5.64%    1.186      1 Template:Button
+100.00%   35.906      1 -total
+ 31.75%   11.401      1 Template:Fasteners_Tools_navi/de
+ 21.54%    7.735      7 Template:PropertyData/de
+ 10.60%    3.807      7 Template:Variable
+  7.99%    2.869      1 Template:VersionPlus/de
+  7.80%    2.800      1 Template:Navigation_menu_2
+  7.52%    2.699      7 Template:MenuCommand
+  7.42%    2.663      1 Template:TRUE
+  7.02%    2.519      2 Template:Caption
+  6.63%    2.381      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169767-0!canonical and timestamp 20260118085356 and revision id 1739946. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169767-0!canonical and timestamp 20260118085415 and revision id 1739948. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
