--- a/wiki/de/Fasteners_Workbench.html
+++ b/wiki/de/Fasteners_Workbench.html
@@ -272,9 +272,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ISO7043.svg&amp;filetimestamp=20240405163104&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ISO7043.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 7043</b> Sechskantmutter mit Flansch und Drehmomentbegrenzung (mit nichtmetallischem Einsatz).</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ISO7044.svg&amp;filetimestamp=20240405163240&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ISO7044.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 7044</b> Sechskantmutter (Typ alle Metalle) mit Flansch und Drehmomentbegrenzung.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ISO7719.svg&amp;filetimestamp=20240405162834&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ISO7719.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 7719</b> Sechskantmutter (Typ alle Metalle) mit Drehmomentbegrenzung.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ISO7719.svg&amp;filetimestamp=20240405162834&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ISO7719.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 7720</b> Prevailing torque type all-metal hexagon nut, style 2.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ISO7719.svg&amp;filetimestamp=20240405162834&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ISO7719.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 7720</b> Sechskantmutter (Typ alle Metalle) mit Drehmomentbegrenzung, Typ 2.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ISO8673.svg&amp;filetimestamp=20230930203517&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ISO8673.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 8673</b> Sechskantmutter mit Feingewinde, Stil 1. <i>Produktklassen A und B.</i></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ISO8674.svg&amp;filetimestamp=20230930203529&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ISO8674.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 8674</b> Sechskant-Hochmutter mit Feingewinde, Typ 2. <i>Produktklassen A und B.</i></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ISO8675.svg&amp;filetimestamp=20230930203543&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ISO8675.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 8675</b> Sechskant-Flachmutter mit Feingewinde, Typ 0. <i>Produktklassen A und B.</i></li></ul>
@@ -413,13 +411,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118085416
+Cached time: 20260118085433
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.511 seconds
-Real time usage: 0.757 seconds
-Preprocessor visited node count: 698/1000000
+CPU time usage: 0.485 seconds
+Real time usage: 0.735 seconds
+Preprocessor visited node count: 697/1000000
 Post&#8208;expand include size: 7106/2097152 bytes
 Template argument size: 1357/2097152 bytes
 Highest expansion depth: 8/100
@@ -429,19 +427,19 @@ Unstrip post&#8208;expand size: 1775/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   35.906      1 -total
- 31.75%   11.401      1 Template:Fasteners_Tools_navi/de
- 21.54%    7.735      7 Template:PropertyData/de
- 10.60%    3.807      7 Template:Variable
-  7.99%    2.869      1 Template:VersionPlus/de
-  7.80%    2.800      1 Template:Navigation_menu_2
-  7.52%    2.699      7 Template:MenuCommand
-  7.42%    2.663      1 Template:TRUE
-  7.02%    2.519      2 Template:Caption
-  6.63%    2.381      1 Template:TOCright
+100.00%   24.877      1 -total
+ 29.19%    7.262      1 Template:Fasteners_Tools_navi/de
+ 20.85%    5.187      7 Template:PropertyData/de
+ 11.62%    2.890      7 Template:Variable
+  8.62%    2.145      1 Template:VersionPlus/de
+  8.41%    2.092      1 Template:Navigation_menu_2
+  7.68%    1.911      2 Template:Caption
+  7.35%    1.829      1 Template:TOCright
+  7.10%    1.766      1 Template:TRUE
+  6.10%    1.516      7 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169767-0!canonical and timestamp 20260118085415 and revision id 1739948. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169767-0!canonical and timestamp 20260118085433 and revision id 1739950. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
