--- a/wiki/cs/Workbenches.html
+++ b/wiki/cs/Workbenches.html
@@ -64,7 +64,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Spreadsheet.svg&amp;filetimestamp=20240527155805&amp;.html" class="mw-file-description"><img src="../File/Workbench_Spreadsheet.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Spreadsheet_Workbench.html" title="Spreadsheet Workbench">Pracovn&iacute; plocha Spreadsheet</a> pro vytv&aacute;&#345;en&iacute; a manipulaci s daty v tabulk&aacute;ch.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Surface.svg&amp;filetimestamp=20210130230011&amp;.html" class="mw-file-description"><img src="../File/Workbench_Surface.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Surface_Workbench.html" title="Surface Workbench">Pracovn&iacute; plocha Surface</a> poskytuje n&aacute;stroje pro vytv&aacute;&#345;en&iacute; a &uacute;pravy povrch&#367;. Je podobn&yacute; mo&#382;nosti <a href="../Part_Builder.html" title="Part Builder">Part Builder</a> Face from edges (Vytvo&#345;it plochu z hran).</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../TechDraw_Workbench.html" title="TechDraw Workbench">Pracovn&iacute; plocha TechDraw</a> pro vytv&aacute;&#345;en&iacute; technick&yacute;ch v&yacute;kres&#367; z 3D model&#367;. Je n&aacute;stupcem <a href="../Drawing_Workbench.html" title="Drawing Workbench">Pracovn&iacute; plochy Drawing</a>.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Test.svg&amp;filetimestamp=20200404174253&amp;.html" class="mw-file-description"><img src="../File/Workbench_Test.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../index.php?title=Testov%C3%A1n%C3%AD&amp;action=edit&amp;redlink=1.html" class="new" title="Testov&aacute;n&iacute; (page does not exist)">Pracovn&iacute; plocha Test Framework</a> slou&#382;&iacute; k lad&#283;n&iacute; FreeCADu. <code>D</code></li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Test.svg&amp;filetimestamp=20200404174253&amp;.html" class="mw-file-description"><img src="../File/Workbench_Test.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Testing.html" title="Testing">Pracovn&iacute; plocha Test Framework</a> slou&#382;&iacute; k lad&#283;n&iacute; FreeCADu. <code>D</code></li></ul>
 <p><span id="Obsolete"></span>
 </p>
 <h3><span id="Zastaral.C3.A9"></span><span class="mw-headline" id="Zastaral&eacute;">Zastaral&eacute;</span></h3>
@@ -110,12 +110,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118085314
+Cached time: 20260118085508
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.118 seconds
-Real time usage: 0.221 seconds
+CPU time usage: 0.169 seconds
+Real time usage: 0.348 seconds
 Preprocessor visited node count: 288/1000000
 Post&#8208;expand include size: 8008/2097152 bytes
 Template argument size: 2376/2097152 bytes
@@ -126,18 +126,18 @@ Unstrip post&#8208;expand size: 4413/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.084      1 -total
- 42.56%    5.569      1 Template:Userdocnavi/cs
- 15.44%    2.020      1 Template:Navigation_menu_2
- 13.75%    1.799      2 Template:Docnav
-  9.13%    1.194      5 Template:Incode
-  7.50%    0.981      1 Template:Button
-  7.38%    0.966      3 Template:Version
-  7.18%    0.939      1 Template:MenuCommand
-  6.94%    0.908      2 Template:VersionMinus
+100.00%   36.686      1 -total
+ 42.20%   15.483      1 Template:Userdocnavi/cs
+ 20.99%    7.700      1 Template:Navigation_menu_2
+ 14.06%    5.159      1 Template:MenuCommand
+  9.97%    3.657      3 Template:Version
+  9.23%    3.388      2 Template:Docnav
+  7.55%    2.768      2 Template:VersionMinus
+  7.07%    2.592      5 Template:Incode
+  6.04%    2.215      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260118085313 and revision id 1739944. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260118085507 and revision id 1739952. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
