--- a/wiki/de/Fasteners_Workbench.html
+++ b/wiki/de/Fasteners_Workbench.html
@@ -277,9 +277,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ISO8674.svg&amp;filetimestamp=20230930203529&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ISO8674.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 8674</b> Sechskant-Hochmutter mit Feingewinde, Typ 2. <i>Produktklassen A und B.</i></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ISO8675.svg&amp;filetimestamp=20230930203543&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ISO8675.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 8675</b> Sechskant-Flachmutter mit Feingewinde, Typ 0. <i>Produktklassen A und B.</i></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_DIN985.svg&amp;filetimestamp=20210815132141&amp;.html" class="mw-file-description"><img src="../File/Fasteners_DIN985.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 10511</b> D&uuml;nne Sechskantmutter mit Drehmomentbegrenzung (mit nichtmetallischem Einsatz).</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_DIN985.svg&amp;filetimestamp=20210815132141&amp;.html" class="mw-file-description"><img src="../File/Fasteners_DIN985.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 10512</b> Prevailing torque type hexagon nut with fine pitch thread (with non-metallic insert).</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_DIN985.svg&amp;filetimestamp=20210815132141&amp;.html" class="mw-file-description"><img src="../File/Fasteners_DIN985.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 10512</b> Sechskantmutter mit Feingewinde und Drehmomentbegrenzung (mit nichtmetallischem Einsatz).</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ISO7719.svg&amp;filetimestamp=20240405162834&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ISO7719.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 10513</b> Prevailing torque type all-metal hexagon nut with fine pitch thread.</li></ul>
 </div>
@@ -409,13 +407,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118085529
+Cached time: 20260118085545
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.479 seconds
-Real time usage: 0.707 seconds
-Preprocessor visited node count: 696/1000000
+CPU time usage: 0.478 seconds
+Real time usage: 0.643 seconds
+Preprocessor visited node count: 695/1000000
 Post&#8208;expand include size: 7106/2097152 bytes
 Template argument size: 1357/2097152 bytes
 Highest expansion depth: 8/100
@@ -425,19 +423,19 @@ Unstrip post&#8208;expand size: 1775/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.441      1 -total
- 33.35%   10.485      1 Template:Fasteners_Tools_navi/de
- 21.51%    6.764      7 Template:PropertyData/de
- 10.21%    3.211      7 Template:Variable
-  9.28%    2.919      1 Template:Button
-  8.23%    2.586      1 Template:VersionPlus/de
-  7.97%    2.505      7 Template:MenuCommand
-  6.29%    1.979      1 Template:Navigation_menu_2
-  5.10%    1.604      1 Template:TRUE
-  4.79%    1.505      1 Template:TOCright
+100.00%   22.147      1 -total
+ 30.35%    6.722      7 Template:PropertyData/de
+ 25.57%    5.663      1 Template:Fasteners_Tools_navi/de
+ 12.19%    2.700      7 Template:Variable
+ 10.46%    2.316      1 Template:TRUE
+  6.83%    1.512      1 Template:Navigation_menu_2
+  6.14%    1.360      1 Template:TOCright
+  5.97%    1.322      1 Template:VersionPlus/de
+  5.77%    1.277      2 Template:Caption
+  5.30%    1.173      7 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169767-0!canonical and timestamp 20260118085528 and revision id 1739954. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169767-0!canonical and timestamp 20260118085544 and revision id 1739956. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
