--- a/wiki/de/Fasteners_Workbench.html
+++ b/wiki/de/Fasteners_Workbench.html
@@ -278,9 +278,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ISO8675.svg&amp;filetimestamp=20230930203543&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ISO8675.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 8675</b> Sechskant-Flachmutter mit Feingewinde, Typ 0. <i>Produktklassen A und B.</i></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_DIN985.svg&amp;filetimestamp=20210815132141&amp;.html" class="mw-file-description"><img src="../File/Fasteners_DIN985.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 10511</b> D&uuml;nne Sechskantmutter mit Drehmomentbegrenzung (mit nichtmetallischem Einsatz).</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_DIN985.svg&amp;filetimestamp=20210815132141&amp;.html" class="mw-file-description"><img src="../File/Fasteners_DIN985.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 10512</b> Sechskantmutter mit Feingewinde und Drehmomentbegrenzung (mit nichtmetallischem Einsatz).</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ISO7719.svg&amp;filetimestamp=20240405162834&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ISO7719.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 10513</b> Prevailing torque type all-metal hexagon nut with fine pitch thread.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ISO7719.svg&amp;filetimestamp=20240405162834&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ISO7719.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 10513</b> Sechskantmutter (Typ alle Metalle) mit Feingewinde und Drehmomentbegrenzung.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_EN1661.svg&amp;filetimestamp=20160531200229&amp;.html" class="mw-file-description"><img src="../File/Fasteners_EN1661.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 10663</b> Sechskantmutter mit Flansch und Feingewinde.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ISO7043.svg&amp;filetimestamp=20240405163104&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ISO7043.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 12125</b> Prevailing torque type hexagon nut with flange and fine pitch thread (with non-metallic insert).</li></ul>
@@ -407,13 +405,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118085545
+Cached time: 20260118085625
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.478 seconds
-Real time usage: 0.643 seconds
-Preprocessor visited node count: 695/1000000
+CPU time usage: 0.409 seconds
+Real time usage: 0.549 seconds
+Preprocessor visited node count: 694/1000000
 Post&#8208;expand include size: 7106/2097152 bytes
 Template argument size: 1357/2097152 bytes
 Highest expansion depth: 8/100
@@ -423,19 +421,19 @@ Unstrip post&#8208;expand size: 1775/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   22.147      1 -total
- 30.35%    6.722      7 Template:PropertyData/de
- 25.57%    5.663      1 Template:Fasteners_Tools_navi/de
- 12.19%    2.700      7 Template:Variable
- 10.46%    2.316      1 Template:TRUE
-  6.83%    1.512      1 Template:Navigation_menu_2
-  6.14%    1.360      1 Template:TOCright
-  5.97%    1.322      1 Template:VersionPlus/de
-  5.77%    1.277      2 Template:Caption
-  5.30%    1.173      7 Template:MenuCommand
+100.00%   20.970      1 -total
+ 24.89%    5.220      1 Template:Fasteners_Tools_navi/de
+ 23.66%    4.961      7 Template:PropertyData/de
+ 13.22%    2.773      7 Template:Variable
+ 12.02%    2.521      1 Template:VersionPlus/de
+  7.53%    1.578      1 Template:TRUE
+  6.72%    1.410      2 Template:Caption
+  6.32%    1.326      1 Template:TOCright
+  6.03%    1.265      7 Template:MenuCommand
+  5.72%    1.200      1 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169767-0!canonical and timestamp 20260118085544 and revision id 1739956. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169767-0!canonical and timestamp 20260118085624 and revision id 1739958. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
