--- a/wiki/cs/Workbenches.html
+++ b/wiki/cs/Workbenches.html
@@ -83,7 +83,7 @@
 <p>Pracovn&iacute; plochy FreeCADu se snadno programuj&iacute; v jazyce <a href="../Python.html" title="Python">Python</a>, proto mnoho lid&iacute; vyv&iacute;j&iacute; dal&scaron;&iacute; pracovn&iacute; plochy mimo hlavn&iacute; v&yacute;vojovou oblast FreeCADu.
 </p>
 <div class="mw-translate-fuzzy">
-<p>Str&aacute;nka <a href="../External_workbenches.html" title="External workbenches">Extern&iacute; pracovn&iacute; plochy</a> obsahuje seznam v&scaron;ech, kter&eacute; jsou t&eacute;to komunit&#283; zn&aacute;my. V&#283;t&scaron;inu z nich lze snadno nainstalovat p&#345;&iacute;mo z FreeCADu pomoc&iacute; [[Std_AddonMgr|Sp&aacute;vce dopl&#328;k&#367;], kter&eacute;ho najdete v menu <b>N&aacute;stroje &rarr; <span typeof="mw:File"><a href="../index.php?title=Std_AddonMgr.svg&amp;filetimestamp=20240704212012&amp;.html" class="mw-file-description"><img src="../File/Std_AddonMgr.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Spr&aacute;vce dopl&#328;k&#367;</b>.
+<p>Str&aacute;nka <a href="../External_workbenches.html" title="External workbenches">Extern&iacute; pracovn&iacute; plochy</a> obsahuje seznam v&scaron;ech pracovn&iacute;ch ploch, kter&eacute; jsou t&eacute;to komunit&#283; zn&aacute;my. V&#283;t&scaron;inu z nich lze snadno nainstalovat p&#345;&iacute;mo z FreeCADu pomoc&iacute; [[Std_AddonMgr|Sp&aacute;vce dopl&#328;k&#367;], kter&eacute;ho najdete v menu <b>N&aacute;stroje &rarr; <span typeof="mw:File"><a href="../index.php?title=Std_AddonMgr.svg&amp;filetimestamp=20240704212012&amp;.html" class="mw-file-description"><img src="../File/Std_AddonMgr.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Spr&aacute;vce dopl&#328;k&#367;</b>.
 </p>
 </div> 
 <p><br>
@@ -110,12 +110,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118085508
+Cached time: 20260118085656
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.169 seconds
-Real time usage: 0.348 seconds
+CPU time usage: 0.122 seconds
+Real time usage: 0.218 seconds
 Preprocessor visited node count: 288/1000000
 Post&#8208;expand include size: 8008/2097152 bytes
 Template argument size: 2376/2097152 bytes
@@ -126,18 +126,18 @@ Unstrip post&#8208;expand size: 4413/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   36.686      1 -total
- 42.20%   15.483      1 Template:Userdocnavi/cs
- 20.99%    7.700      1 Template:Navigation_menu_2
- 14.06%    5.159      1 Template:MenuCommand
-  9.97%    3.657      3 Template:Version
-  9.23%    3.388      2 Template:Docnav
-  7.55%    2.768      2 Template:VersionMinus
-  7.07%    2.592      5 Template:Incode
-  6.04%    2.215      1 Template:Button
+100.00%   21.152      1 -total
+ 32.05%    6.780      1 Template:Userdocnavi/cs
+ 15.79%    3.340      2 Template:VersionMinus
+ 13.81%    2.921      2 Template:Docnav
+ 13.78%    2.914      3 Template:Version
+ 10.42%    2.204      1 Template:Navigation_menu_2
+  8.33%    1.761      1 Template:Button
+  6.23%    1.317      5 Template:Incode
+  5.43%    1.148      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260118085507 and revision id 1739952. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260118085655 and revision id 1739960. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
